# vim-lc

./: Cargo.toml  README.md  TODO.md  minvimrc
.github/: stale.yml
autoload/: lsp.vim  rpc.vim  vim.vim  vlc.vim
autoload/vlc/: lsp.vim  ncm2.vim  rpc.vim  vlc.vim
plugin/: vlc.vim
src/: config.rs  language_client.rs  main.rs  rpc.rs  state.rs  vlc.rs
src/language_client/: mod.rs
src/language_client/extensions/: mod.rs  rust_analyzer.rs
src/lsp/: code_lens.rs  mod.rs  receive.rs  send.rs  text_document.rs  window.rs  workspace.rs
src/lsp/extensions/: mod.rs  rust_analyzer.rs
src/rpc/: mod.rs  protocol.rs
src/vim/: mod.rs  receive.rs  send.rs  types.rs
src/vim/extensions/: mod.rs  ncm2.rs
src/vlc/: lsp.rs  mod.rs  vim.rs
