[package]
name = "vlc"
version = "0.1.0"
authors = ["Martin Asquino <martin.asquino@gmail.com>"]
edition = "2018"

[dependencies]
lsp-types = "0.86.0"
crossbeam = "0.8"
tokio = { version = "0.3.6", features = [ "rt-multi-thread", "io-std", "io-util", "macros", "process", "fs", "sync" ] }
futures = "0.3"
log = "0.4"
serde = "1.0.106"
serde_json = "1.0.51"
jsonrpc-core = "14.0.5"
toml = "0.5"
fern = "0.6"
shellexpand = "2"
parking_lot = { version = "0.11.1", features = [ "deadlock_detection" ] }
thiserror = "1.0.22"
anyhow = "1.0.36"
